src/features2d.h

    typedef cv::Ptr<cv::AKAZE> *AKAZE;
    typedef cv::Ptr<cv::AgastFeatureDetector> *AgastFeatureDetector;
    typedef cv::Ptr<cv::BRISK> *BRISK;
    typedef cv::Ptr<cv::FastFeatureDetector> *FastFeatureDetector;
    typedef cv::Ptr<cv::GFTTDetector> *GFTTDetector;
    typedef cv::Ptr<cv::KAZE> *KAZE;
    typedef cv::Ptr<cv::MSER> *MSER;
    typedef cv::Ptr<cv::ORB> *ORB;
    typedef cv::Ptr<cv::SimpleBlobDetector> *SimpleBlobDetector;
    typedef cv::Ptr<cv::BFMatcher> *BFMatcher;
    typedef cv::Ptr<cv::FlannBasedMatcher> *FlannBasedMatcher;
    typedef cv::Ptr<cv::SIFT> *SIFT;
typedef void *AKAZE;
typedef void *AgastFeatureDetector;
typedef void *BRISK;
typedef void *FastFeatureDetector;
typedef void *GFTTDetector;
typedef void *KAZE;
typedef void *MSER;
typedef void *ORB;
typedef void *SimpleBlobDetector;
typedef void *BFMatcher;
typedef void *FlannBasedMatcher;
typedef void *SIFT;
    void AKAZE_Close(AKAZE a);
    void AgastFeatureDetector_Close(AgastFeatureDetector a);
    void BRISK_Close(BRISK b);
    void FastFeatureDetector_Close(FastFeatureDetector f);
    void GFTTDetector_Close(GFTTDetector a);
    void KAZE_Close(KAZE a);
    void MSER_Close(MSER a);
    void ORB_Close(ORB o);
    void SimpleBlobDetector_Close(SimpleBlobDetector b);
    void BFMatcher_Close(BFMatcher b);
    void FlannBasedMatcher_Close(FlannBasedMatcher f);
    void SIFT_Close(SIFT f);