lib/src/g/features2d.g.dart


class _SymbolAddresses {
  const _SymbolAddresses();
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(AKAZEPtr)>>
      get AKAZE_Close => ffi.Native.addressOf(self.AKAZE_Close);
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(AKAZEPtr, imp1.CvCallback_0)>>
      get AKAZE_Close_Async => ffi.Native.addressOf(self.AKAZE_Close_Async);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(AgastFeatureDetectorPtr)>>
      get AgastFeatureDetector_Close =>
          ffi.Native.addressOf(self.AgastFeatureDetector_Close);
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(
                  AgastFeatureDetectorPtr, imp1.CvCallback_0)>>
      get AgastFeatureDetector_Close_Async =>
          ffi.Native.addressOf(self.AgastFeatureDetector_Close_Async);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(BFMatcherPtr)>>
      get BFMatcher_Close => ffi.Native.addressOf(self.BFMatcher_Close);
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(BFMatcherPtr, imp1.CvCallback_0)>>
      get BFMatcher_Close_Async =>
          ffi.Native.addressOf(self.BFMatcher_Close_Async);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(BRISKPtr)>>
      get BRISK_Close => ffi.Native.addressOf(self.BRISK_Close);
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(BRISKPtr, imp1.CvCallback_0)>>
      get BRISK_Close_Async => ffi.Native.addressOf(self.BRISK_Close_Async);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(FastFeatureDetectorPtr)>>
      get FastFeatureDetector_Close =>
          ffi.Native.addressOf(self.FastFeatureDetector_Close);
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(
                  FastFeatureDetectorPtr, imp1.CvCallback_0)>>
      get FastFeatureDetector_Close_Async =>
          ffi.Native.addressOf(self.FastFeatureDetector_Close_Async);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(FlannBasedMatcherPtr)>>
      get FlannBasedMatcher_Close =>
          ffi.Native.addressOf(self.FlannBasedMatcher_Close);
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(
                  FlannBasedMatcherPtr, imp1.CvCallback_0)>>
      get FlannBasedMatcher_Close_Async =>
          ffi.Native.addressOf(self.FlannBasedMatcher_Close_Async);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(GFTTDetectorPtr)>>
      get GFTTDetector_Close => ffi.Native.addressOf(self.GFTTDetector_Close);
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(
                  GFTTDetectorPtr, imp1.CvCallback_0)>>
      get GFTTDetector_Close_Async =>
          ffi.Native.addressOf(self.GFTTDetector_Close_Async);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(KAZEPtr)>> get KAZE_Close =>
      ffi.Native.addressOf(self.KAZE_Close);
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(KAZEPtr, imp1.CvCallback_0)>>
      get KAZE_Close_Async => ffi.Native.addressOf(self.KAZE_Close_Async);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(MSERPtr)>> get MSER_Close =>
      ffi.Native.addressOf(self.MSER_Close);
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(MSERPtr, imp1.CvCallback_0)>>
      get MSER_Close_Async => ffi.Native.addressOf(self.MSER_Close_Async);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ORBPtr)>> get ORB_Close =>
      ffi.Native.addressOf(self.ORB_Close);
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(ORBPtr, imp1.CvCallback_0)>>
      get ORB_Close_Async => ffi.Native.addressOf(self.ORB_Close_Async);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(SIFTPtr)>> get SIFT_Close =>
      ffi.Native.addressOf(self.SIFT_Close);
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(SIFTPtr, imp1.CvCallback_0)>>
      get SIFT_Close_Async => ffi.Native.addressOf(self.SIFT_Close_Async);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(SimpleBlobDetectorPtr)>>
      get SimpleBlobDetector_Close =>
          ffi.Native.addressOf(self.SimpleBlobDetector_Close);
  ffi.Pointer<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(
                  SimpleBlobDetectorPtr, imp1.CvCallback_0)>>
      get SimpleBlobDetector_Close_Async =>
          ffi.Native.addressOf(self.SimpleBlobDetector_Close_Async);
}

final class AKAZE extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef AKAZEPtr = ffi.Pointer<AKAZE>;

final class AgastFeatureDetector extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef AgastFeatureDetectorPtr = ffi.Pointer<AgastFeatureDetector>;

final class BFMatcher extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef BFMatcherPtr = ffi.Pointer<BFMatcher>;

final class BRISK extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef BRISKPtr = ffi.Pointer<BRISK>;
typedef CvStatus = imp1.CvStatus;

final class FastFeatureDetector extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef FastFeatureDetectorPtr = ffi.Pointer<FastFeatureDetector>;

final class FlannBasedMatcher extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef FlannBasedMatcherPtr = ffi.Pointer<FlannBasedMatcher>;

final class GFTTDetector extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GFTTDetectorPtr = ffi.Pointer<GFTTDetector>;

final class KAZE extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef KAZEPtr = ffi.Pointer<KAZE>;

final class MSER extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef MSERPtr = ffi.Pointer<MSER>;
typedef Mat = imp1.Mat;

final class ORB extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef ORBPtr = ffi.Pointer<ORB>;

final class SIFT extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef SIFTPtr = ffi.Pointer<SIFT>;
typedef Scalar = imp1.Scalar;

final class SimpleBlobDetector extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

final class SimpleBlobDetectorParams extends ffi.Struct {
  @ffi.UnsignedChar()
  external int blobColor;

  @ffi.Bool()
  external bool filterByArea;

  @ffi.Bool()
  external bool filterByCircularity;

  @ffi.Bool()
  external bool filterByColor;

  @ffi.Bool()
  external bool filterByConvexity;

  @ffi.Bool()
  external bool filterByInertia;

  @ffi.Float()
  external double maxArea;

  @ffi.Float()
  external double maxCircularity;

  @ffi.Float()
  external double maxConvexity;

  @ffi.Float()
  external double maxInertiaRatio;

  @ffi.Float()
  external double maxThreshold;

  @ffi.Float()
  external double minArea;

  @ffi.Float()
  external double minCircularity;

  @ffi.Float()
  external double minConvexity;

  @ffi.Float()
  external double minDistBetweenBlobs;

  @ffi.Float()
  external double minInertiaRatio;

  @ffi.Size()
  external int minRepeatability;

  @ffi.Float()
  external double minThreshold;

  @ffi.Float()
  external double thresholdStep;
}

typedef SimpleBlobDetectorPtr = ffi.Pointer<SimpleBlobDetector>;
typedef VecChar = imp1.VecChar;
typedef VecDMatch = imp1.VecDMatch;
typedef VecKeyPoint = imp1.VecKeyPoint;
typedef VecVecDMatch = imp1.VecVecDMatch;
